--- a/src/pages/home/index.css
+++ b/src/pages/home/index.css
@@ -1,3 +1,74 @@
+/* For Webkit (Safari, Chrome) */
+::-webkit-scrollbar {
+    width: 12px; /* Width of the scrollbar */
+}
+
+/* ::-webkit-scrollbar-track { */
+/* background: #f1f1f1; Background color of the track */
+/* } */
+
+::-webkit-scrollbar-thumb {
+    background: #000; /* Color of the thumb (the draggable part) */
+    border-radius: 6px; /* Rounded corners */
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: #555; /* Color of the thumb on hover */
+}
+
+@media screen and (min-width: 1440px) {
+    /* Styles for ultrawide monitors */
+    .chatroom {
+        /* Adjust styles for ultrawide monitors */
+        width: 1000px;
+        height: calc(93.5vh - 20px);
+        /* max-height: 400px; */
+    }
+}
+
+h1{
+    display: flex;
+    justify-content: center;
+}
+
+.chatroom{
+    width: 100%;
+    height: calc(93.5vh - 20px);
+    /* max-height: 400px; */
+}
+
+.chatbox{
+    padding: 20px;
+    width: calc(99% - 20px);
+    height: 90%;
+    overflow-y: auto;
+    font-size: 20px;
+}
+
+.messages{
+    padding: 10px;
+    border-bottom: 2px solid rgba(0, 0, 0, 0.3);
+}
+
 .layout{
-    border: 1px solid #ccc;
+    border-radius: 10px;
+}
+
+.user-input{
+    display: flex;
+    justify-content: center;
+    height: 5%;
+}
+
+.message-box{
+    width: 80%;
+    border-radius: 10px;
+    font-size: 20px;
+}
+
+.send-button{
+    margin-left: 10px;
+    font-size: 22px;
+    width: 15%;
+    border-radius: 10px;
 }
