--- a/src/pages/home/index.css
+++ b/src/pages/home/index.css
@@ -1,20 +1,23 @@
 /* For Webkit (Safari, Chrome) */
+
+/* 
 ::-webkit-scrollbar {
-    width: 12px; /* Width of the scrollbar */
+    width: 12px;
 }
 
-/* ::-webkit-scrollbar-track { */
-/* background: #f1f1f1; Background color of the track */
-/* } */
+::-webkit-scrollbar-track {
+    background: transparent;
+}
 
-::-webkit-scrollbar-thumb {
-    background: #000; /* Color of the thumb (the draggable part) */
-    border-radius: 6px; /* Rounded corners */
+::-webkit-scrollbar-thumb:vertical {
+    background: #555; 
+    border-radius: 6px;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-    background: #555; /* Color of the thumb on hover */
-}
+    background: #000;
+} */
+
 
 @media screen and (min-width: 1440px) {
     /* Styles for ultrawide monitors */
@@ -22,7 +25,6 @@
         /* Adjust styles for ultrawide monitors */
         width: 1000px;
         height: calc(93.5vh - 20px);
-        /* max-height: 400px; */
     }
 }
 
@@ -34,13 +36,12 @@ h1{
 .chatroom{
     width: 100%;
     height: calc(93.5vh - 20px);
-    /* max-height: 400px; */
 }
 
 .chatbox{
     padding: 20px;
     width: calc(99% - 20px);
-    height: 90%;
+    height: 88%;
     overflow-y: auto;
     font-size: 20px;
 }
@@ -48,6 +49,8 @@ h1{
 .messages{
     padding: 10px;
     border-bottom: 2px solid rgba(0, 0, 0, 0.3);
+    overflow-y: auto;
+    word-wrap: break-word;
 }
 
 .layout{
@@ -60,10 +63,15 @@ h1{
     height: 5%;
 }
 
-.message-box{
+.message-input-box{
+    padding: 10px;
+    border-bottom: 2px solid rgba(0, 0, 0, 0.3);
     width: 80%;
     border-radius: 10px;
     font-size: 20px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .send-button{
