--- a/src/pages/home/index.css
+++ b/src/pages/home/index.css
@@ -1,20 +1,20 @@
 /* For Webkit (Safari, Chrome) */
-::-webkit-scrollbar {
-    width: 12px; /* Width of the scrollbar */
+/* ::-webkit-scrollbar {
+    width: 12px;
 }
 
-/* ::-webkit-scrollbar-track { */
-/* background: #f1f1f1; Background color of the track */
-/* } */
+::-webkit-scrollbar-track {
+    background: #f1f1f1;
+}
 
 ::-webkit-scrollbar-thumb {
-    background: #000; /* Color of the thumb (the draggable part) */
-    border-radius: 6px; /* Rounded corners */
+    background: #000;
+    border-radius: 6px;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-    background: #555; /* Color of the thumb on hover */
-}
+    background: #555;
+} */
 
 @media screen and (min-width: 1440px) {
     /* Styles for ultrawide monitors */
@@ -57,6 +57,7 @@ h1{
 .messages{
     padding: 20px;
     border-bottom: 2px solid rgba(0, 0, 0, 0.3);
+    word-wrap:break-word;
 }
 
 .layout{
