--- a/src/pages/home/index.css
+++ b/src/pages/home/index.css
@@ -1,29 +1,10 @@
-/* For Webkit (Safari, Chrome) */
-
-/* 
-::-webkit-scrollbar {
-    width: 12px;
-}
-
-::-webkit-scrollbar-track {
-    background: transparent;
-}
-
-::-webkit-scrollbar-thumb:vertical {
-    background: #555; 
-    border-radius: 6px;
-}
-
-::-webkit-scrollbar-thumb:hover {
-    background: #555;
-} */
-
 @media screen and (min-width: 1440px) {
     /* Styles for ultrawide monitors */
     .chatroom {
         /* Adjust styles for ultrawide monitors */
         width: 1000px;
         height: calc(93.5vh - 20px);
+        /* max-height: 400px; */
     }
 }
 
@@ -35,12 +16,15 @@ h1{
 .chatroom{
     width: 100%;
     height: calc(93.5vh - 20px);
+    display: flex;
+    flex-direction: column;
+    /* max-height: 400px; */
 }
 
 .chatbox{
     /* padding: 20px;
     width: calc(99% - 20px);
-    height: 88%;
+    height: 90%;
     overflow-y: auto;
     font-size: 20px; */
     padding: 20px;
@@ -55,8 +39,7 @@ h1{
 .messages{
     padding: 20px;
     border-bottom: 2px solid rgba(0, 0, 0, 0.3);
-    overflow-y: auto;
-    word-wrap: break-word;
+    word-wrap:break-word;
 }
 
 .layout{
@@ -69,15 +52,11 @@ h1{
     height: 5%;
 }
 
-.message-input-box{
-    padding: 10px;
-    border-bottom: 2px solid rgba(0, 0, 0, 0.3);
+
+.message-box{
     width: 80%;
     border-radius: 10px;
     font-size: 20px;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
 }
 
 .send-button{
@@ -92,12 +71,12 @@ h1{
     .chatbox {
       padding: 10px; /* Adjust padding for smaller screens */
     }
-  
+
     .messages {
       padding: 5px; /* Adjust padding for smaller screens */
       font-size: 16px; /* Adjust font size for smaller screens */
     }
-  
+
     .message-box,
     .send-button {
       font-size: 18px; /* Adjust font size for smaller screens */
